plugins {
	id 'java'
	id 'eclipse'
	id 'org.springframework.boot' version '3.5.9'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.interviewgo'
version = '0.0.1-ALPHA'
description = 'Interview-GO_Backend'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	set('springAiVersion', "1.1.2")
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	
	// AI
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.5'
	implementation 'org.springframework.ai:spring-ai-starter-model-google-genai'
	implementation 'com.google.cloud:google-cloud-texttospeech:2.46.0'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	
	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.5'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	
	//Youtube API
	implementation 'com.google.api-client:google-api-client:2.0.0'
	implementation 'com.google.apis:google-api-services-youtube:v3-rev20251217-2.0.0'
	implementation 'com.google.http-client:google-http-client-jackson2:1.43.3'
	
	// json으로 변경 
	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.15.2'
 
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}


